  when file descriptors are large; communicate() now uses poll() when possible.

- Issue #6369: Fix an RLE decompression bug in the binhex module.

- Issue #6344: Fixed a crash of mmap.read() when passed a negative argument.

- Issue #4005: Fixed a crash of pydoc when there was a zip file present in
  sys.path.

Extension Modules
-----------------

- Fix a segfault in expat.

- Issue #4509: array.array objects are no longer modified after an operation
  failing due to the resize restriction in-place when the object has exported
  buffers.

Build
-----

- Issue #6802: Fix build issues on MacOSX 10.6

- Issue 4601: 'make install' did not set the appropriate permissions on
directories.

- Issue 5390: Add uninstall icon independent of whether file
extensions are installed.

Documentation
-------------

- Issue #6556: Fixed the Distutils configuration files location explanation
  for Windows.

Test
----

- Fix a test in importlib.test.source.test_abc_loader that was incorrectly
testing when a .pyc file lacked an code object bytecode.


What's New in Python 3.1?
=========================

*Release date: 27-June-2009*

Core and Builtins
-----------------

- Issue #6334: Fix bug in range length calculation for ranges with
large arguments.

- Issue #6329: Fixed iteration for memoryview objects (it was being blocked
because it wasn't recognized as a sequence).

Library
-------

- Issue #6314: logging.basicConfig() performs extra checks on the "level"
argument.

- Issue #6274: Fixed possible file descriptors leak in subprocess.py

- Accessing io.StringIO.buffer now raises an AttributeError instead of
io.UnsupportedOperation.

- Issue #6271: mmap tried to close invalid file handle (-1) when anonymous.
(On Unix)

- Issue #1202: zipfile module would cause a struct.error when attempting to
store files with a CRC32 > 2**31-1.

Extension Modules
-----------------

- Issue #5590: Remove unused global variable in pyexpat extension.


What's New in Python 3.1 Release Candidate 2?